--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,11 @@
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif; 
   background: bisque;
-  color: #3e4144; }
+  color: rgb(62, 65, 68);
+}
 
 .header-bar {
+  // border: 1px solid red;
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
@@ -13,22 +15,26 @@ body {
   text-transform: uppercase;
   background-color: lightcyan;
   width: 97%;
-  border-bottom: 1px solid #E5E5E5; }
+  border-bottom: 1px solid #E5E5E5; 
+}
 
 .nav-bar {
   display: flex;
   flex-direction: column;
-  background-color: aquamarine; }
-
+  background-color: aquamarine;
+  
+}
 button {
-  font-family: 'Montserrat', sans-serif;
+  // justify-content: flex-start;
+  font-family: 'Montserrat', sans-serif; 
   background-color: lightgoldenrodyellow;
   border: 1px solid #24315e;
-  color: #3e4144;
+  color: rgb(62, 65, 68);
   padding: 5px;
-  letter-spacing: 1px; }
-
+  letter-spacing: 1px;
+}
 button:hover {
   background-color: lightseagreen;
   color: bisque;
-  transition: 0.3s ease; }
+  transition: 0.3s ease;
+}
