--- a/src/scss/components/App.scss
+++ b/src/scss/components/App.scss
@@ -1,3 +1,9 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
 body {
   font-family: 'Montserrat', sans-serif; 
   background: bisque;
@@ -14,7 +20,7 @@ body {
   padding-bottom: 5px;
   text-transform: uppercase;
   background-color: lightcyan;
-  width: 97%;
+  width: 100%;
   border-bottom: 1px solid #E5E5E5; 
 }
 
