New item css (#26)
* newItem form CSS; init commit

* newItem form CSS complete

* sass file structure set up

* editForm CSS complete; NOT DRY; .new-item-form used, but will not work if .edit-item-form

--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -6,7 +6,7 @@ html, body {
 
 body {
   font-family: 'Montserrat', sans-serif; 
-  background: bisque;
+  background: aliceblue;
   color: rgb(62, 65, 68);
 }
 
@@ -30,17 +30,17 @@ body {
   background-color: aquamarine;
   
 }
-button {
+// button {
   // justify-content: flex-start;
-  font-family: 'Montserrat', sans-serif; 
-  background-color: lightgoldenrodyellow;
-  border: 1px solid #24315e;
-  color: rgb(62, 65, 68);
-  padding: 5px;
-  letter-spacing: 1px;
-}
-button:hover {
-  background-color: lightseagreen;
-  color: bisque;
-  transition: 0.3s ease;
-}
+  // font-family: 'Montserrat', sans-serif; 
+  // background-color: lightgoldenrodyellow;
+  // border: 1px solid #24315e;
+  // color: rgb(62, 65, 68);
+  // padding: 5px;
+  // letter-spacing: 1px;
+// }
+// button:hover {
+//   background-color: lightseagreen;
+//   color: bisque;
+//   transition: 0.3s ease;
+// }
