Header nav structure style (#32)
* Fixed formatting and used ternary for header style

* Renamed _app.scss, created scss files

* Added webfontloader

* Added fontawesome script to head of index.html

* Added webfont

* Added icons to navbar, html fix to header

* Moved reset to vendor dir, added base styles, mixins, variables, header and nav styles

* Revised html structure of header, added icons to navbar

* Add more styles for header and nav

* Changed variable colors, updated NewItem w/ new variables

* Fixed variable names

--- a/src/scss/components/_EditItem.scss
+++ b/src/scss/components/_EditItem.scss
@@ -85,27 +85,26 @@ textarea {
 }
 
 button {
-  // background: linear-gradient(to right, #6D87F4, #CFAAD4);
-    outline: none;    
-    flex: 1 1 auto;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: white;
-   /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
-    box-shadow: 0 0 20px #eee;
-    border-radius: 10px;
-    background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+  //   outline: none;    
+  //   flex: 1 1 auto;
+  //   margin: 10px;
+  //   padding: 10px;
+  //   text-align: center;
+  //   text-transform: uppercase;
+  //   transition: 0.5s;
+  //   background-size: 200% auto;
+  //   color: white;
+  //  /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
+  //   box-shadow: 0 0 20px #eee;
+  //   border-radius: 10px;
+  //   background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%);
+
+  @include submit-button;
    }
 
   
 
 button:hover {
-  background-position: right center;
-    // background-color: lightseagreen;
-    // color: bisque;
-    // transition: 0.3s ease;
+  // background-position: right center;
+  @include submit-button-hover;
   }
