--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,11 +1,14 @@
-$main-background-color: #DDDDF0;
-$form-background-color: #F8F8F9;
+// color palette
 
-$second-lightest-grey: #D5D5D6;
-$font-text-color-grey: #A3A3A6;
-$font-heading-color-grey:#494949;
-$greenish-grey: #8D887F;
-$primary-blue: #6D87F4;
-$primary-mauve: #CFAAD4;
+$gunmetal: #2D3142;
+$seaweed: #187795;
+$grey: #5E6572;
+$pastel-blue: #9FC2CC;
+$silver: #BFC0C0;
+$white: #fff;
+$black: #111;
 
+// other colors
 
+$background-color: #f9f9f9;
+$border-color: rgba(213, 213, 214, 0.3);
