--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -1,4 +1,5 @@
 // color palette
+// https://coolors.co/2d3142-187795-5e6572-9fc2cc-bfc0c0
 
 $gunmetal: #2D3142;
 $seaweed: #187795;
@@ -12,3 +13,4 @@ $black: #111;
 
 $background-color: #f9f9f9;
 $border-color: rgba(213, 213, 214, 0.3);
+$form-border-color: rgba(213, 213, 214, 1.0);
