--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,5 +8,5 @@
 @import './components/_app.scss';
 @import './components/_header.scss';
 @import './components/_nav.scss';
-@import './components/_NewItem.scss';
-// @import './components/_EditItem.scss';
+@import './components/_itemForms.scss';
+@import './components/_itemList.scss';
