--- a/src/scss/styles.css
+++ b/src/scss/styles.css
@@ -297,8 +297,21 @@ template {
 [hidden] {
   display: none; }
 
+html, body {
+  box-sizing: border-box;
+  margin: 0px;
+  font-size: 16px;
+  height: 100%; }
+
 * {
-  font-family: 'Karla', sans-serif; }
+  font-family: 'Karla', sans-serif;
+  box-sizing: inherit; }
+
+#root, .app-container, .page-container {
+  height: 100%; }
+
+img {
+  max-width: 100%; }
 
 a {
   text-decoration: none; }
@@ -312,12 +325,17 @@ header {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #fff; }
 
 .page-container {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  margin-top: 83px; }
 
 .nav-bar {
   width: 250px;
@@ -328,9 +346,10 @@ header {
 
 .page-content {
   flex-grow: 1;
-  position: relative;
   margin-left: 250px;
-  background-color: #f9f9f9; }
+  background-color: #f9f9f9;
+  height: 100%;
+  width: 100%; }
 
 .header-bar {
   border-bottom: 1px solid rgba(213, 213, 214, 0.3); }
@@ -369,93 +388,84 @@ header {
   .nav-bar h2 {
     color: #5E6572; }
   .nav-bar li a {
-    color: #000; }
+    color: #111; }
   .nav-bar .svg-inline--fa {
     color: #187795;
     margin-right: 20px; }
 
-.main-content {
-  background-color: #f9f9f9; }
-
 .new-item-form {
-  box-sizing: border-box;
   max-width: 640px;
-  margin: 0 auto;
-  padding: 55px;
-  background-color: #f9f9f9;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  margin: 50px auto;
+  padding: 50px;
+  background-color: #fff;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  font: 14px sans-serif;
   text-align: center;
-  color: #494949; }
-
-h1 {
-  padding: 15px 8px;
-  font-weight: bold; }
+  color: #5E6572; }
 
 .form-row {
-  position: relative;
   text-align: left;
   margin-bottom: 25px; }
 
-.new-item-form .form-row > span {
-  display: inline-block;
-  box-sizing: border-box;
-  width: 180px;
-  text-align: right;
-  padding: 8px 25px; }
+.form-row > label {
+  margin-right: 20px; }
 
 .form-row input {
-  position: relative;
-  color: #494949;
-  box-sizing: border-box;
-  width: 240px;
-  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
-  padding: 12px 18px;
-  border: 1px solid #dbdbdb; }
-
-input {
-  -webkit-appearance: textfield;
-  background-color: white;
-  -webkit-rtl-ordering: logical;
-  cursor: text; }
+  width: 300px;
+  border: none;
+  border-bottom: 2px solid #9FC2CC;
+  padding: 2px 0;
+  transition: background-color .5s;
+  cursor: text;
+  color: #5E6572;
+  background-color: #fff; }
 
 input[type=text]:focus {
-  outline: none;
-  border: 1px solid #494949;
-  transition: 0.3s; }
+  background-color: #fff;
+  transition: background-color .5s;
+  outline: none; }
 
 select {
   outline: none;
-  background-color: white;
-  color: #494949;
-  box-sizing: border-box;
-  max-width: 240px;
-  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
-  padding: 12px 18px;
-  border: 1px solid #dbdbdb; }
+  background-color: #fff;
+  color: #5E6572;
+  border: 2px solid #9FC2CC;
+  padding: 20px;
+  width: 300px; }
 
 textarea {
   outline: none;
-  -webkit-appearance: textfield;
-  background-color: white;
-  -webkit-rtl-ordering: logical;
+  background-color: #fff;
+  border: 2px solid #9FC2CC;
   cursor: text;
-  max-width: 400px; }
+  width: 300px;
+  height: 80px;
+  margin-bottom: 25px; }
 
-button {
-  outline: none;
-  flex: 1 1 auto;
-  margin: 10px;
-  padding: 10px;
-  text-align: center;
-  text-transform: uppercase;
-  transition: 0.5s;
-  background-size: 200% auto;
-  color: white;
-  /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
-  box-shadow: 0 0 20px #eee;
+.form-submit {
   border-radius: 10px;
-  background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%); }
+  background-image: linear-gradient(to right, #2D3142 0%, #187795 51%, #2D3142 100%);
+  background-size: 200% auto;
+  color: #fff;
+  padding: 10px 20px;
+  transition: background-position .5s;
+  outline: none;
+  margin: 20px;
+  cursor: pointer; }
 
-button:hover {
-  background-position: right center; }
+.form-submit:hover {
+  background-position: right center;
+  transition: background-position .5s; }
+
+.category-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center; }
+  .category-list li {
+    height: 400px;
+    width: 300px;
+    margin: 50px; }
