Item detail view (#35)
* majority of item-detail-view complete; need minor adjustments

* item detail almost complete; need to copy for unauth view

* CSS complete; will need to pull in mixins, variables, etc.

* Added new fontawesome libraries

* Fixed implementation of fontawesome icons

* Commented out search bar placeholder

* Tried to fix background color of main content area, minor changes to item

--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -11,9 +11,9 @@ html, body {
   box-sizing: inherit;
 }
 
-#root, .app-container, .page-container {
-  height: 100%;
-}
+// #root, .app-container, .page-container {
+//   height: 100%;
+// }
 
 img {
   max-width: 100%;
