--- a/src/scss/partials/_mixins.scss
+++ b/src/scss/partials/_mixins.scss
@@ -17,6 +17,9 @@
   color: $white;
   padding: 10px 20px;
   transition: background-position .5s;
+  -webkit-box-shadow: 13px 25px 59px 0px rgba(0,0,0,0.18);
+  -moz-box-shadow: 13px 25px 59px 0px rgba(0,0,0,0.18);
+  box-shadow: 13px 25px 59px 0px rgba(0,0,0,0.18);
   outline: none;
   margin: 20px;
   cursor: pointer;
